--- a/assets/views/base.html
+++ b/assets/views/base.html
@@ -5,12 +5,6 @@
   <title>{% block title %}{% endblock title %}</title>
 
   <script>
-    window.tailwind = window.tailwind || {};
-    window.tailwind.config = {
-      darkMode: 'class'
-    };
-  </script>
-  <script>
     (function () {
       function getStoredTheme() {
         try {
@@ -25,8 +19,14 @@
       document.documentElement.classList.toggle('dark', theme === 'dark');
     })();
   </script>
-  <script src="https://unpkg.com/htmx.org@2.0.0/dist/htmx.min.js"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+  <script>
+    window.tailwind = window.tailwind || {};
+    window.tailwind.config = {
+      darkMode: 'selector'
+    };
+  </script>
+  <script src="https://unpkg.com/htmx.org@2.0.0/dist/htmx.min.js"></script>
   {% block head %}
 
   {% endblock head %}
